# Paipu-Cleaner-Cancers

./: .env  .gitignore  README.md  cancer_detection_analyzer.py  cancer_text_classifier_app.py  check_enrichment.py  config.py  debug_classification.py  example_case.ipynb  exploration.ipynb  fallback.py  full_data.py  functions.py  improved score.ipynb  known_samples.py  medical_entity_recognition.py  metadata_enrichment.py  new_pipeline.ipynb  nlp_classifier.py  non_mouse_data.py  packages.txt  pipeline.py  preprocessing.py  pyproject.toml  real-quick.py  regex_classifier.py  requirements.txt  test.ipynb  text_column_processing.py  zensical.toml
.github/workflows/: docs.yml
data/: cancer_in_wrong_place.txt
docs/: architecture.md  developer_guide.md  index.md  quickstart.md
figures/: generate_images.py  generate_ner_viz.py  high_level.html  known_samples_visual.py  metrics_dashboard.html  ner_visual.html  poster_diagram.html
misc/: api-test-2.py  api-test.ipynb  api-test.py  cancer_detection_analyzer.py  cancer_sample_classifier.py  example_case.ipynb  exploration.ipynb
outputs/: optimizations.md
providers/: __init__.py  llm.py  ncbi.py
site/: index.html  search.json
site/architecture/: index.html
site/developer_guide/: index.html
site/quickstart/: index.html
verification/: sample_verification.py  test.ipynb
