[project]
name = "paipu-cleaner-cancers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "biopython>=1.86",
    "lxml>=6.0.2",
    "medspacy>=1.0.0",
    "negspacy>=1.0.4",
    "notebook>=7.4.7",
    "polars>=1.35.2",
    "pyarrow>=21.0.0",
    "spacy>=3.8.7",
    "streamlit>=1.56.0",
]
